--- a/JianZhiOffer/JianZhiOffer.vcxproj
+++ b/JianZhiOffer/JianZhiOffer.vcxproj
@@ -94,7 +94,7 @@
     <ClCompile Include="二叉树中序遍历的下一个节点.cpp" />
     <ClCompile Include="二叉树的深度.cpp" />
     <ClCompile Include="二叉树的镜像.cpp" />
-    <ClCompile Include="二维数组中的查找.cpp" />
+    <ClCompile Include="04.二维数组中的查找.cpp" />
     <ClCompile Include="二进制中1的个数.cpp" />
     <ClCompile Include="从上往下打印二叉树.cpp" />
     <ClCompile Include="从尾到头打印链表.cpp" />
