--- a/JianZhiOffer/JianZhiOffer.vcxproj
+++ b/JianZhiOffer/JianZhiOffer.vcxproj
@@ -83,6 +83,8 @@
   <ItemGroup>
     <ClCompile Include="1-n整数中1出现的次数.cpp" />
     <ClCompile Include="10.2青蛙跳台阶问题.cpp" />
+    <ClCompile Include="14.1剪绳子.cpp" />
+    <ClCompile Include="14.2.剪绳子2.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="不用加减乘除做加法.cpp" />
     <ClCompile Include="丑数.cpp" />
@@ -125,7 +127,7 @@
     <ClCompile Include="05.替换空格.cpp" />
     <ClCompile Include="最小的k个数.cpp" />
     <ClCompile Include="最长不含重复字符的子字符串.cpp" />
-    <ClCompile Include="机器人的运动范围.cpp" />
+    <ClCompile Include="13.机器人的运动范围.cpp" />
     <ClCompile Include="构建乘积数组.cpp" />
     <ClCompile Include="栈的压入弹出序列.cpp" />
     <ClCompile Include="树的子结构.cpp" />
@@ -134,7 +136,7 @@
     <ClCompile Include="滑动窗口的最大值.cpp" />
     <ClCompile Include="09.用两个栈实现队列.cpp" />
     <ClCompile Include="矩形覆盖.cpp" />
-    <ClCompile Include="矩阵中的路径.cpp" />
+    <ClCompile Include="12.矩阵中的路径.cpp" />
     <ClCompile Include="第一个只出现一次的字符.cpp" />
     <ClCompile Include="翻转单词顺序列.cpp" />
     <ClCompile Include="表示数值的字符串.cpp" />
