--- a/JianZhiOffer/JianZhiOffer.vcxproj
+++ b/JianZhiOffer/JianZhiOffer.vcxproj
@@ -98,7 +98,7 @@
     <ClCompile Include="二叉树的深度.cpp" />
     <ClCompile Include="二叉树的镜像.cpp" />
     <ClCompile Include="04.二维数组中的查找.cpp" />
-    <ClCompile Include="二进制中1的个数.cpp" />
+    <ClCompile Include="15.二进制中1的个数.cpp" />
     <ClCompile Include="从上往下打印二叉树.cpp" />
     <ClCompile Include="06.从尾到头打印链表.cpp" />
     <ClCompile Include="删除链表中重复的节点.cpp" />
@@ -115,7 +115,7 @@
     <ClCompile Include="平衡二叉树.cpp" />
     <ClCompile Include="序列化二叉树.cpp" />
     <ClCompile Include="把数组排成最小的数.cpp" />
-    <ClCompile Include="数值的整数次方.cpp" />
+    <ClCompile Include="16.数值的整数次方.cpp" />
     <ClCompile Include="数字在排序数组中出现的次数.cpp" />
     <ClCompile Include="数据流中的中位数.cpp" />
     <ClCompile Include="数组中出现次数超过一半的数字.cpp" />
