--- a/JianZhiOffer/JianZhiOffer.vcxproj
+++ b/JianZhiOffer/JianZhiOffer.vcxproj
@@ -84,9 +84,11 @@
     <ClCompile Include="1-n整数中1出现的次数.cpp" />
     <ClCompile Include="10.2青蛙跳台阶问题.cpp" />
     <ClCompile Include="14.1剪绳子.cpp" />
-    <ClCompile Include="14.2.剪绳子2.cpp" />
+    <ClCompile Include="14.2剪绳子2.cpp" />
     <ClCompile Include="17.打印从1到最大的n位数.cpp" />
     <ClCompile Include="18.删除链表的节点.cpp" />
+    <ClCompile Include="32.2从上到下打印二叉树 II.cpp" />
+    <ClCompile Include="32.3从上到下打印二叉树 III.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="不用加减乘除做加法.cpp" />
     <ClCompile Include="丑数.cpp" />
@@ -98,21 +100,21 @@
     <ClCompile Include="二叉树中和为某一值的路径.cpp" />
     <ClCompile Include="二叉树中序遍历的下一个节点.cpp" />
     <ClCompile Include="二叉树的深度.cpp" />
-    <ClCompile Include="二叉树的镜像.cpp" />
+    <ClCompile Include="27.二叉树的镜像.cpp" />
     <ClCompile Include="04.二维数组中的查找.cpp" />
     <ClCompile Include="15.二进制中1的个数.cpp" />
-    <ClCompile Include="从上往下打印二叉树.cpp" />
+    <ClCompile Include="32.1从上往下打印二叉树.cpp" />
     <ClCompile Include="06.从尾到头打印链表.cpp" />
     <ClCompile Include="删除链表中重复的节点.cpp" />
-    <ClCompile Include="包含min函数的栈.cpp" />
-    <ClCompile Include="反转链表.cpp" />
-    <ClCompile Include="合并两个排序的链表.cpp" />
+    <ClCompile Include="30.包含min函数的栈.cpp" />
+    <ClCompile Include="24.反转链表.cpp" />
+    <ClCompile Include="25.合并两个排序的链表.cpp" />
     <ClCompile Include="和为s的两个数字.cpp" />
     <ClCompile Include="和为s的连续正数序列.cpp" />
     <ClCompile Include="圆圈中最后剩下的数字.cpp" />
     <ClCompile Include="复杂链表的复制.cpp" />
     <ClCompile Include="字符串的排列.cpp" />
-    <ClCompile Include="对称的二叉树.cpp" />
+    <ClCompile Include="28.对称的二叉树.cpp" />
     <ClCompile Include="左旋转字符串.cpp" />
     <ClCompile Include="平衡二叉树.cpp" />
     <ClCompile Include="序列化二叉树.cpp" />
@@ -131,8 +133,8 @@
     <ClCompile Include="最长不含重复字符的子字符串.cpp" />
     <ClCompile Include="13.机器人的运动范围.cpp" />
     <ClCompile Include="构建乘积数组.cpp" />
-    <ClCompile Include="栈的压入弹出序列.cpp" />
-    <ClCompile Include="树的子结构.cpp" />
+    <ClCompile Include="31.栈的压入弹出序列.cpp" />
+    <ClCompile Include="26.树的子结构.cpp" />
     <ClCompile Include="19.正则表达式的匹配.cpp" />
     <ClCompile Include="求1+2+3+...+n.cpp" />
     <ClCompile Include="滑动窗口的最大值.cpp" />
@@ -141,14 +143,14 @@
     <ClCompile Include="12.矩阵中的路径.cpp" />
     <ClCompile Include="第一个只出现一次的字符.cpp" />
     <ClCompile Include="翻转单词顺序列.cpp" />
-    <ClCompile Include="表示数值的字符串.cpp" />
-    <ClCompile Include="调整数组顺序使奇数位于偶数前面.cpp" />
+    <ClCompile Include="20.表示数值的字符串.cpp" />
+    <ClCompile Include="21.调整数组顺序使奇数位于偶数前面.cpp" />
     <ClCompile Include="跳台阶.cpp" />
     <ClCompile Include="连续子数组的最大和.cpp" />
     <ClCompile Include="07.重建二叉树.cpp" />
-    <ClCompile Include="链表中倒数第k个节点.cpp" />
+    <ClCompile Include="22.链表中倒数第k个节点.cpp" />
     <ClCompile Include="链表中环的入口节点.cpp" />
-    <ClCompile Include="顺时针打印矩阵.cpp" />
+    <ClCompile Include="29.顺时针打印矩阵.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
