--- a/JianZhiOffer/JianZhiOffer.vcxproj
+++ b/JianZhiOffer/JianZhiOffer.vcxproj
@@ -93,11 +93,11 @@
     <ClCompile Include="不用加减乘除做加法.cpp" />
     <ClCompile Include="丑数.cpp" />
     <ClCompile Include="两个链表的第一个公共节点.cpp" />
-    <ClCompile Include="二叉搜索树与双向链表.cpp" />
-    <ClCompile Include="二叉搜索树的后序遍历.cpp" />
+    <ClCompile Include="36.二叉搜索树与双向链表.cpp" />
+    <ClCompile Include="33.二叉搜索树的后序遍历.cpp" />
     <ClCompile Include="二叉搜索树的第k个节点.cpp" />
     <ClCompile Include="二叉树中两个节点最低公共祖先.cpp" />
-    <ClCompile Include="二叉树中和为某一值的路径.cpp" />
+    <ClCompile Include="34.二叉树中和为某一值的路径.cpp" />
     <ClCompile Include="二叉树中序遍历的下一个节点.cpp" />
     <ClCompile Include="二叉树的深度.cpp" />
     <ClCompile Include="27.二叉树的镜像.cpp" />
@@ -112,24 +112,24 @@
     <ClCompile Include="和为s的两个数字.cpp" />
     <ClCompile Include="和为s的连续正数序列.cpp" />
     <ClCompile Include="圆圈中最后剩下的数字.cpp" />
-    <ClCompile Include="复杂链表的复制.cpp" />
-    <ClCompile Include="字符串的排列.cpp" />
+    <ClCompile Include="35.复杂链表的复制.cpp" />
+    <ClCompile Include="38.字符串的排列.cpp" />
     <ClCompile Include="28.对称的二叉树.cpp" />
     <ClCompile Include="左旋转字符串.cpp" />
     <ClCompile Include="平衡二叉树.cpp" />
-    <ClCompile Include="序列化二叉树.cpp" />
+    <ClCompile Include="37.序列化二叉树.cpp" />
     <ClCompile Include="把数组排成最小的数.cpp" />
     <ClCompile Include="16.数值的整数次方.cpp" />
     <ClCompile Include="数字在排序数组中出现的次数.cpp" />
-    <ClCompile Include="数据流中的中位数.cpp" />
-    <ClCompile Include="数组中出现次数超过一半的数字.cpp" />
+    <ClCompile Include="41.数据流中的中位数.cpp" />
+    <ClCompile Include="39.数组中出现次数超过一半的数字.cpp" />
     <ClCompile Include="数组中只出现一次的两个数字.cpp" />
     <ClCompile Include="数组中的逆序对.cpp" />
     <ClCompile Include="03.数组中重复的数字.cpp" />
     <ClCompile Include="10.1斐波那契数列.cpp" />
     <ClCompile Include="11.旋转数组的最小数字.cpp" />
     <ClCompile Include="05.替换空格.cpp" />
-    <ClCompile Include="最小的k个数.cpp" />
+    <ClCompile Include="40.最小的k个数.cpp" />
     <ClCompile Include="最长不含重复字符的子字符串.cpp" />
     <ClCompile Include="13.机器人的运动范围.cpp" />
     <ClCompile Include="构建乘积数组.cpp" />
@@ -146,7 +146,7 @@
     <ClCompile Include="20.表示数值的字符串.cpp" />
     <ClCompile Include="21.调整数组顺序使奇数位于偶数前面.cpp" />
     <ClCompile Include="跳台阶.cpp" />
-    <ClCompile Include="连续子数组的最大和.cpp" />
+    <ClCompile Include="42.连续子数组的最大和.cpp" />
     <ClCompile Include="07.重建二叉树.cpp" />
     <ClCompile Include="22.链表中倒数第k个节点.cpp" />
     <ClCompile Include="链表中环的入口节点.cpp" />
