--- a/JianZhiOffer/JianZhiOffer.vcxproj
+++ b/JianZhiOffer/JianZhiOffer.vcxproj
@@ -81,75 +81,85 @@
     <ClInclude Include="header.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="1-n整数中1出现的次数.cpp" />
+    <ClCompile Include="43.统计1 ~ n整数中1出现的次数.cpp" />
     <ClCompile Include="10.2青蛙跳台阶问题.cpp" />
     <ClCompile Include="14.1剪绳子.cpp" />
-    <ClCompile Include="14.2剪绳子2.cpp" />
+    <ClCompile Include="14.2剪绳子 II.cpp" />
     <ClCompile Include="17.打印从1到最大的n位数.cpp" />
     <ClCompile Include="18.删除链表的节点.cpp" />
     <ClCompile Include="32.2从上到下打印二叉树 II.cpp" />
     <ClCompile Include="32.3从上到下打印二叉树 III.cpp" />
+    <ClCompile Include="44.数字序列中某一位的数字.cpp" />
+    <ClCompile Include="46.把数字翻译成字符串.cpp" />
+    <ClCompile Include="47.礼物的最大价值.cpp" />
+    <ClCompile Include="53.1在排序数组中查找数字.cpp" />
+    <ClCompile Include="53.2找出0～n-1中缺失的数字.cpp" />
+    <ClCompile Include="56.2数组中数字出现的次数 II.cpp" />
+    <ClCompile Include="59.2队列的最大值.cpp" />
+    <ClCompile Include="60.n个骰子的点数.cpp" />
+    <ClCompile Include="61.扑克牌中的顺子.cpp" />
+    <ClCompile Include="63.股票的最大利润.cpp" />
+    <ClCompile Include="67.把字符串转换成整数.cpp" />
+    <ClCompile Include="68.1二叉搜索树的最近公共祖先.cpp" />
+    <ClCompile Include="68.2二叉树的最近公共祖先.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="不用加减乘除做加法.cpp" />
-    <ClCompile Include="丑数.cpp" />
-    <ClCompile Include="两个链表的第一个公共节点.cpp" />
+    <ClCompile Include="65.不用加减乘除做加法.cpp" />
+    <ClCompile Include="49.丑数.cpp" />
+    <ClCompile Include="52.两个链表的第一个公共节点.cpp" />
     <ClCompile Include="36.二叉搜索树与双向链表.cpp" />
     <ClCompile Include="33.二叉搜索树的后序遍历.cpp" />
-    <ClCompile Include="二叉搜索树的第k个节点.cpp" />
-    <ClCompile Include="二叉树中两个节点最低公共祖先.cpp" />
+    <ClCompile Include="54.二叉搜索树的第k大节点.cpp" />
     <ClCompile Include="34.二叉树中和为某一值的路径.cpp" />
-    <ClCompile Include="二叉树中序遍历的下一个节点.cpp" />
-    <ClCompile Include="二叉树的深度.cpp" />
+    <ClCompile Include="69.二叉树中序遍历的下一个节点.cpp" />
+    <ClCompile Include="55.1二叉树的深度.cpp" />
     <ClCompile Include="27.二叉树的镜像.cpp" />
     <ClCompile Include="04.二维数组中的查找.cpp" />
     <ClCompile Include="15.二进制中1的个数.cpp" />
     <ClCompile Include="32.1从上往下打印二叉树.cpp" />
     <ClCompile Include="06.从尾到头打印链表.cpp" />
-    <ClCompile Include="删除链表中重复的节点.cpp" />
+    <ClCompile Include="72.删除链表中重复的节点.cpp" />
     <ClCompile Include="30.包含min函数的栈.cpp" />
     <ClCompile Include="24.反转链表.cpp" />
     <ClCompile Include="25.合并两个排序的链表.cpp" />
-    <ClCompile Include="和为s的两个数字.cpp" />
-    <ClCompile Include="和为s的连续正数序列.cpp" />
-    <ClCompile Include="圆圈中最后剩下的数字.cpp" />
+    <ClCompile Include="57.1和为s的两个数字.cpp" />
+    <ClCompile Include="57.2和为s的连续正数序列.cpp" />
+    <ClCompile Include="62.圆圈中最后剩下的数字.cpp" />
     <ClCompile Include="35.复杂链表的复制.cpp" />
     <ClCompile Include="38.字符串的排列.cpp" />
     <ClCompile Include="28.对称的二叉树.cpp" />
-    <ClCompile Include="左旋转字符串.cpp" />
-    <ClCompile Include="平衡二叉树.cpp" />
+    <ClCompile Include="58.2左旋转字符串.cpp" />
+    <ClCompile Include="55.2平衡二叉树.cpp" />
     <ClCompile Include="37.序列化二叉树.cpp" />
-    <ClCompile Include="把数组排成最小的数.cpp" />
+    <ClCompile Include="45.把数组排成最小的数.cpp" />
     <ClCompile Include="16.数值的整数次方.cpp" />
-    <ClCompile Include="数字在排序数组中出现的次数.cpp" />
     <ClCompile Include="41.数据流中的中位数.cpp" />
     <ClCompile Include="39.数组中出现次数超过一半的数字.cpp" />
-    <ClCompile Include="数组中只出现一次的两个数字.cpp" />
-    <ClCompile Include="数组中的逆序对.cpp" />
+    <ClCompile Include="56.1数组中数字出现的次数.cpp" />
+    <ClCompile Include="51.数组中的逆序对.cpp" />
     <ClCompile Include="03.数组中重复的数字.cpp" />
     <ClCompile Include="10.1斐波那契数列.cpp" />
     <ClCompile Include="11.旋转数组的最小数字.cpp" />
     <ClCompile Include="05.替换空格.cpp" />
     <ClCompile Include="40.最小的k个数.cpp" />
-    <ClCompile Include="最长不含重复字符的子字符串.cpp" />
+    <ClCompile Include="48.最长不含重复字符的子字符串.cpp" />
     <ClCompile Include="13.机器人的运动范围.cpp" />
-    <ClCompile Include="构建乘积数组.cpp" />
+    <ClCompile Include="66.构建乘积数组.cpp" />
     <ClCompile Include="31.栈的压入弹出序列.cpp" />
     <ClCompile Include="26.树的子结构.cpp" />
     <ClCompile Include="19.正则表达式的匹配.cpp" />
-    <ClCompile Include="求1+2+3+...+n.cpp" />
-    <ClCompile Include="滑动窗口的最大值.cpp" />
+    <ClCompile Include="64.求1+2+3+...+n.cpp" />
+    <ClCompile Include="59.1滑动窗口的最大值.cpp" />
     <ClCompile Include="09.用两个栈实现队列.cpp" />
-    <ClCompile Include="矩形覆盖.cpp" />
+    <ClCompile Include="70.矩形覆盖.cpp" />
     <ClCompile Include="12.矩阵中的路径.cpp" />
-    <ClCompile Include="第一个只出现一次的字符.cpp" />
-    <ClCompile Include="翻转单词顺序列.cpp" />
+    <ClCompile Include="50.第一个只出现一次的字符.cpp" />
+    <ClCompile Include="58.1翻转单词顺序.cpp" />
     <ClCompile Include="20.表示数值的字符串.cpp" />
     <ClCompile Include="21.调整数组顺序使奇数位于偶数前面.cpp" />
-    <ClCompile Include="跳台阶.cpp" />
     <ClCompile Include="42.连续子数组的最大和.cpp" />
     <ClCompile Include="07.重建二叉树.cpp" />
     <ClCompile Include="22.链表中倒数第k个节点.cpp" />
-    <ClCompile Include="链表中环的入口节点.cpp" />
+    <ClCompile Include="71.链表中环的入口节点.cpp" />
     <ClCompile Include="29.顺时针打印矩阵.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
