--- a/JianZhiOffer/JianZhiOffer.vcxproj.filters
+++ b/JianZhiOffer/JianZhiOffer.vcxproj.filters
@@ -260,5 +260,8 @@
     <ClCompile Include="43.统计1 ~ n整数中1出现的次数.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="II_001.整数除法.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
