--- a/JianZhiOffer/JianZhiOffer.vcxproj
+++ b/JianZhiOffer/JianZhiOffer.vcxproj
@@ -102,7 +102,12 @@
     <ClCompile Include="67.把字符串转换成整数.cpp" />
     <ClCompile Include="68.1二叉搜索树的最近公共祖先.cpp" />
     <ClCompile Include="68.2二叉树的最近公共祖先.cpp" />
-    <ClCompile Include="II_001.整数除法.cpp" />
+    <ClCompile Include="II 002.二进制加法.cpp" />
+    <ClCompile Include="II 001.整数除法.cpp" />
+    <ClCompile Include="II 003.前n个数字二进制中1的个数.cpp" />
+    <ClCompile Include="II 007.数组中和为0的三个数.cpp" />
+    <ClCompile Include="II 008.和大于等于target的最短子数组.cpp" />
+    <ClCompile Include="II 009.乘积小于K的子数组.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="65.不用加减乘除做加法.cpp" />
     <ClCompile Include="49.丑数.cpp" />
