--- a/JianZhiOffer/JianZhiOffer.vcxproj.filters
+++ b/JianZhiOffer/JianZhiOffer.vcxproj.filters
@@ -278,5 +278,11 @@
     <ClCompile Include="II 009.乘积小于K的子数组.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="II_004.只出现一次的数字.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="II_010.和为k的子数组.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
