--- a/JianZhiOffer/JianZhiOffer.vcxproj
+++ b/JianZhiOffer/JianZhiOffer.vcxproj
@@ -108,8 +108,10 @@
     <ClCompile Include="II 007.数组中和为0的三个数.cpp" />
     <ClCompile Include="II 008.和大于等于target的最短子数组.cpp" />
     <ClCompile Include="II 009.乘积小于K的子数组.cpp" />
-    <ClCompile Include="II_004.只出现一次的数字.cpp" />
-    <ClCompile Include="II_010.和为k的子数组.cpp" />
+    <ClCompile Include="II 004.只出现一次的数字.cpp" />
+    <ClCompile Include="II 010.和为k的子数组.cpp" />
+    <ClCompile Include="II 014.字符串中的变位词.cpp" />
+    <ClCompile Include="II 015.字符串中的所有变位词.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="65.不用加减乘除做加法.cpp" />
     <ClCompile Include="49.丑数.cpp" />
