--- a/JianZhiOffer/JianZhiOffer.vcxproj.filters
+++ b/JianZhiOffer/JianZhiOffer.vcxproj.filters
@@ -278,10 +278,16 @@
     <ClCompile Include="II 009.乘积小于K的子数组.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="II_004.只出现一次的数字.cpp">
+    <ClCompile Include="II 004.只出现一次的数字.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="II_010.和为k的子数组.cpp">
+    <ClCompile Include="II 010.和为k的子数组.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="II 014.字符串中的变位词.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="II 015.字符串中的所有变位词.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
