--- a/JianZhiOffer/JianZhiOffer.vcxproj
+++ b/JianZhiOffer/JianZhiOffer.vcxproj
@@ -115,6 +115,10 @@
     <ClCompile Include="II 016.不含重复字符的最长子字符串.cpp" />
     <ClCompile Include="II 021.删除链表的倒数第n个结点.cpp" />
     <ClCompile Include="II 022.链表中环的入口节点.cpp" />
+    <ClCompile Include="II 023.两个链表的第一个重合节点.cpp" />
+    <ClCompile Include="II 024.反转链表.cpp" />
+    <ClCompile Include="II 025.链表中的两数相加.cpp" />
+    <ClCompile Include="II 074.合并区间.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="65.不用加减乘除做加法.cpp" />
     <ClCompile Include="49.丑数.cpp" />
