--- a/JianZhiOffer/JianZhiOffer.vcxproj
+++ b/JianZhiOffer/JianZhiOffer.vcxproj
@@ -118,6 +118,8 @@
     <ClCompile Include="II 023.两个链表的第一个重合节点.cpp" />
     <ClCompile Include="II 024.反转链表.cpp" />
     <ClCompile Include="II 025.链表中的两数相加.cpp" />
+    <ClCompile Include="II 030.插入、删除和随机访问都是 O(1) 的容器.cpp" />
+    <ClCompile Include="II 031.最近最少使用缓存.cpp" />
     <ClCompile Include="II 074.合并区间.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="65.不用加减乘除做加法.cpp" />
