--- a/JianZhiOffer/JianZhiOffer.vcxproj
+++ b/JianZhiOffer/JianZhiOffer.vcxproj
@@ -119,6 +119,8 @@
     <ClCompile Include="II 024.反转链表.cpp" />
     <ClCompile Include="II 025.链表中的两数相加.cpp" />
     <ClCompile Include="II 026.重排链表.cpp" />
+    <ClCompile Include="II 027.回文链表.cpp" />
+    <ClCompile Include="II 028.展平多级双向链表.cpp" />
     <ClCompile Include="II 030.插入、删除和随机访问都是 O(1) 的容器.cpp" />
     <ClCompile Include="II 031.最近最少使用缓存.cpp" />
     <ClCompile Include="II 032.有效的变位词.cpp" />
