--- a/JianZhiOffer/JianZhiOffer.vcxproj
+++ b/JianZhiOffer/JianZhiOffer.vcxproj
@@ -121,10 +121,12 @@
     <ClCompile Include="II 026.重排链表.cpp" />
     <ClCompile Include="II 027.回文链表.cpp" />
     <ClCompile Include="II 028.展平多级双向链表.cpp" />
+    <ClCompile Include="II 029.排序的循环链表.cpp" />
     <ClCompile Include="II 030.插入、删除和随机访问都是 O(1) 的容器.cpp" />
     <ClCompile Include="II 031.最近最少使用缓存.cpp" />
     <ClCompile Include="II 032.有效的变位词.cpp" />
     <ClCompile Include="II 074.合并区间.cpp" />
+    <ClCompile Include="II 075.数组相对排序.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="65.不用加减乘除做加法.cpp" />
     <ClCompile Include="49.丑数.cpp" />
