--- a/JianZhiOffer/JianZhiOffer.vcxproj.filters
+++ b/JianZhiOffer/JianZhiOffer.vcxproj.filters
@@ -329,5 +329,11 @@
     <ClCompile Include="II 028.展平多级双向链表.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="II 029.排序的循环链表.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="II 075.数组相对排序.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
