--- a/JianZhiOffer/JianZhiOffer.vcxproj
+++ b/JianZhiOffer/JianZhiOffer.vcxproj
@@ -125,6 +125,9 @@
     <ClCompile Include="II 030.插入、删除和随机访问都是 O(1) 的容器.cpp" />
     <ClCompile Include="II 031.最近最少使用缓存.cpp" />
     <ClCompile Include="II 032.有效的变位词.cpp" />
+    <ClCompile Include="II 041.滑动窗口的平均值.cpp" />
+    <ClCompile Include="II 044.二叉树每层的最大值.cpp" />
+    <ClCompile Include="II 045.二叉树最底层最左边的值.cpp" />
     <ClCompile Include="II 074.合并区间.cpp" />
     <ClCompile Include="II 075.数组相对排序.cpp" />
     <ClCompile Include="main.cpp" />
