--- a/JianZhiOffer/JianZhiOffer.vcxproj.filters
+++ b/JianZhiOffer/JianZhiOffer.vcxproj.filters
@@ -335,5 +335,14 @@
     <ClCompile Include="II 075.数组相对排序.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="II 044.二叉树每层的最大值.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="II 045.二叉树最底层最左边的值.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="II 041.滑动窗口的平均值.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
