--- a/JianZhiOffer/JianZhiOffer.vcxproj
+++ b/JianZhiOffer/JianZhiOffer.vcxproj
@@ -125,6 +125,9 @@
     <ClCompile Include="II 030.插入、删除和随机访问都是 O(1) 的容器.cpp" />
     <ClCompile Include="II 031.最近最少使用缓存.cpp" />
     <ClCompile Include="II 032.有效的变位词.cpp" />
+    <ClCompile Include="II 033.变位词组.cpp" />
+    <ClCompile Include="II 034.外星语言是否排序.cpp" />
+    <ClCompile Include="II 035.最小时间差.cpp" />
     <ClCompile Include="II 041.滑动窗口的平均值.cpp" />
     <ClCompile Include="II 042.最近请求次数.cpp" />
     <ClCompile Include="II 043.往完全二叉树添加节点.cpp" />
