--- a/JianZhiOffer/JianZhiOffer.vcxproj
+++ b/JianZhiOffer/JianZhiOffer.vcxproj
@@ -133,6 +133,8 @@
     <ClCompile Include="II 043.往完全二叉树添加节点.cpp" />
     <ClCompile Include="II 044.二叉树每层的最大值.cpp" />
     <ClCompile Include="II 045.二叉树最底层最左边的值.cpp" />
+    <ClCompile Include="II 046.二叉树的右侧视图.cpp" />
+    <ClCompile Include="II 047.二叉树剪枝.cpp" />
     <ClCompile Include="II 074.合并区间.cpp" />
     <ClCompile Include="II 075.数组相对排序.cpp" />
     <ClCompile Include="main.cpp" />
