--- a/JianZhiOffer/JianZhiOffer.vcxproj
+++ b/JianZhiOffer/JianZhiOffer.vcxproj
@@ -138,6 +138,8 @@
     <ClCompile Include="II 048.序列化与反序列化二叉树.cpp" />
     <ClCompile Include="II 049.从根节点到叶节点的路径数字之和.cpp" />
     <ClCompile Include="II 050.向下的路径节点之和.cpp" />
+    <ClCompile Include="II 051.节点之和最大的路径.cpp" />
+    <ClCompile Include="II 052.展平二叉搜索树.cpp" />
     <ClCompile Include="II 074.合并区间.cpp" />
     <ClCompile Include="II 075.数组相对排序.cpp" />
     <ClCompile Include="main.cpp" />
