--- a/JianZhiOffer/JianZhiOffer.vcxproj
+++ b/JianZhiOffer/JianZhiOffer.vcxproj
@@ -140,6 +140,7 @@
     <ClCompile Include="II 050.向下的路径节点之和.cpp" />
     <ClCompile Include="II 051.节点之和最大的路径.cpp" />
     <ClCompile Include="II 052.展平二叉搜索树.cpp" />
+    <ClCompile Include="II 053.二叉搜索树中的中序后继.cpp" />
     <ClCompile Include="II 074.合并区间.cpp" />
     <ClCompile Include="II 075.数组相对排序.cpp" />
     <ClCompile Include="main.cpp" />
