--- a/JianZhiOffer/JianZhiOffer.vcxproj
+++ b/JianZhiOffer/JianZhiOffer.vcxproj
@@ -81,6 +81,8 @@
     <ClInclude Include="header.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="095.最长公共子序列.cpp" />
+    <ClCompile Include="096.字符串交织.cpp" />
     <ClCompile Include="43.统计1 ~ n整数中1出现的次数.cpp" />
     <ClCompile Include="10.2青蛙跳台阶问题.cpp" />
     <ClCompile Include="14.1剪绳子.cpp" />
