--- a/JianZhiOffer/JianZhiOffer.vcxproj.filters
+++ b/JianZhiOffer/JianZhiOffer.vcxproj.filters
@@ -428,10 +428,13 @@
     <ClCompile Include="II 094.最少回文分割.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="095.最长公共子序列.cpp">
+    <ClCompile Include="II 095.最长公共子序列.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="096.字符串交织.cpp">
+    <ClCompile Include="II 096.字符串交织.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="II 097.子序列的数目.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
